--- a/styles.css
+++ b/styles.css
@@ -13,13 +13,13 @@ body {
 header {
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
   margin: 3rem auto;
-  border-radius: 10px;
+  border-radius: 20px;
   padding: 1rem;
   background-color: #4fc08d;
   color: white;
   text-align: center;
   width: 90%;
-  max-width: 40rem;
+  max-width: 100rem;
 }
 
 #app {
@@ -83,6 +83,41 @@ table, th, td {
   padding: 1rem;
   text-align: center;
   width: 90%;
-  max-width: 30rem;
+  max-width: 10rem;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: inline-start;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 100px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
+}
+label {
+  padding: 10px 15px;
+  background: #f2f2f2;
+  color: #4D4D4D;
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  text-align: center;
+  -webkit-border-radius: 6px 6px 0px 0px;
+  border-radius: 6px 6px 0px 0px;
 }
 
